--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -752,13 +752,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d6edabc798a4acbaaa530beb4718bb8",
+       "model_id": "ffd357c2cec44924bfd39d60caa43e82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,7 +777,7 @@
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.75)\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,\n",
     "             dissipating=False, max_intensity=300, point_radius=4)\n",
-    "marker_layer = gmaps.marker_layer(locations)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "fig.add_layer(heat_layer)\n",
     "fig.add_layer(marker_layer)\n",
     "# Call the figure to plot the data.\n",
